...
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/category_text_view">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/movie_item"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
...
