<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/popular_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/popular"
        android:padding="20dp"
        android:textSize="@dimen/font_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/upcoming_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/upcoming"
        android:padding="20dp"
        android:textSize="@dimen/font_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular_text_view"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/top_rated_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/top_rated"
        android:padding="20dp"
        android:textSize="@dimen/font_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upcoming_text_view"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/now_playing_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:padding="20dp"
        android:textSize="@dimen/font_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_rated_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>